# complex_docker

./: .travis.yml  docker-compose.yml
client/: .travis.yml  Dockerfile  Dockerfile.dev  package-lock.json  package.json
client/nginx/: default.conf
client/src/: main.js
client/src/components/: HelloWorld.vue
nginx/: default.conf
server/: Dockerfile  pyproject.toml
server/app/: main.py
server/app/api/: api.py  deps.py  users.py
server/app/core/: config.py
server/app/crud/: __init__.py  base.py  crud_user.py  deps.py
server/app/db/: db_session.py
server/app/models/: user.py
server/app/redis/: redis.py
server/app/schemas/: __init__.py  user.py
server/tests/: test_fastapi_postgree.py
worker/: index.js
worker1/: Dockerfile.dev  main.py  pyproject.toml
