[tool.poetry]
name = "fastapi-postgree"
version = "0.1.0"
description = ""
authors = ["hotratx <mgviero@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
SQLAlchemy = "1.4.22"
asyncpg = "^0.24.0"
python-dotenv = "^0.19.0"
redis = "^3.5.3"
pydantic = {extras = ["email"], version = "^1.8.2"}
aioredis = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
